<resources>
	<string name="app_name">Spacee_App</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="relay_ok1">はい</string>
	<string name="relay_ng1">いいえ</string>
	<string name="error_title1">エラー</string>
	<string name="error_title2">通信エラー</string>
	<string name="error_msg_common1">エラーが発生しました</string>
	<string name="error_msg_common2">データが取得できませんでした</string>
	<string name="logout_from">からログアウト</string>
	<string name="error_title_icc">　ACR-1255 未検出</string>
	<string name="error_msg_icc">　ＩＣカードリーダー［ACR-1255］の\n　　　電源が入っている事を確認してください</string>
	<string name="appmain_ble_not_supported1">BLE未対応端末です[BLE not supported]</string>
	<string name="appmain_ble_not_supported2">BLE未対応端末です[OS version &gt; 4.3]</string>
	<string name="appmain_lower_than_os5_0">本アプリはＯＳバージョン 5.0 未満は非対応です</string>
	<string name="appmain_title_work_space">作業スペース</string>
	<string name="appmain_title_meeting_space">ミーティングスペース</string>
	<string name="appmain_title_check_booking">ログイン方法を選択</string>
	<string name="appmain_title_rule_guide">ご利用ガイド</string>
	<string name="appmain_title_login_ic">ICカード・IC付き携帯でログイン</string>
	<string name="appmain_title_login_qr">アプリのＱＲコードでログイン</string>
	<string name="appmain_title_login_pw">ID/パスワードでログイン</string>
	<string name="appmain_title_entry_app">アプリで会員登録</string>
	<string name="appmain_title_entry_card">支払い情報入力</string>
	<string name="appmain_title_entry_input">会員情報を入力</string>
	<string name="appmain_title_entry_invoice">支払い情報入力</string>
	<string name="appmain_title_entry_policy">利用規約の同意</string>
	<string name="appmain_title_booking_list">予約中のスペース一覧</string>
	<string name="appmain_title_order_comfirm">内容確認</string>
	<string name="appmain_title_order_complete">内容確認完了</string>
	<string name="appmain_title_select_login">ログイン方法を選択</string>
	<string name="appmain_title_account_link">アカウント連携</string>
	<string name="appmain_title_link_complete">連携完了</string>
	<string name="appmain_title_booking_status">予約状況</string>
	<string name="appmain_title_provider_login">管理者ログイン</string>
	<string name="appmain_title_office_list">オフィスリスト</string>
	<string name="frag_appmain_num_desk">人分</string>
	<string name="frag_appmain_num_room">部屋</string>
	<string name="frag_booklist_error_title">予約なし</string>
	<string name="frag_booklist_error_msg">予約がありません</string>
	<string name="frag_entry_app_msg_title">SMS送信完了</string>
	<string name="frag_meeting_detail_psn_no">～%1$d人</string>
	<string name="frag_meeting_detail_square">%1$d㎡</string>
	<string name="frag_meeting_detail_equipment">●%s\n</string>
	<string name="frag_meeting_detail_status_avail">利用可</string>
	<string name="frag_meeting_detail_status_full">利用中</string>
	<string name="frag_meeting_detail_status_out_service">時間外</string>
	<string name="frag_meeting_detail_seat_no"> 席</string>
	<string name="frag_meeting_detail_time_now">現在</string>
	<string name="frag_meeting_detail_format">　%1$d月%2$d日</string>
	<string name="frag_meeting_detail_today">(今日)</string>
	<string name="frag_meeting_detail_no_equipment">●設備なし</string>
	<string name="frag_meeting_list_status_avail">利用可</string>
	<string name="frag_meeting_list_status_full">利用中</string>
	<string name="frag_meeting_list_status_out_service">時間外</string>
	<string name="frag_meeting_list_no_equipment">設備なし</string>
	<string name="frag_meeting_list_max_psn">・最大</string>
	<string name="frag_meeting_list_psn_avail">人利用\n・</string>
	<string name="frag_meeting_list_min_unit">分から利用可能</string>
	<string name="frag_meeting_list_time_now">現在</string>
	<string name="frag_order_confirm_pay_credit">クレジットカード支払い</string>
	<string name="frag_order_confirm_card_id">****.****.****.%1$s</string>
	<string name="frag_order_confirm_pay_invoice">請求書払い</string>
	<string name="frag_order_confirm_error_msg">支払方法が登録されていません</string>
	<string name="frag_status_booking_today">今日</string>
	<string name="frag_work_detail_psn_no">～%1$d人</string>
	<string name="frag_work_detail_square">%1$d㎡</string>
	<string name="frag_work_detail_equipment">●%s\n</string>
	<string name="frag_work_detail_status_avail">利用可</string>
	<string name="frag_work_detail_status_full">満員中</string>
	<string name="frag_work_detail_status_out_service">時間外</string>
	<string name="frag_work_detail_seat_no"> 席</string>
	<string name="frag_work_detail_time_now">現在</string>
	<string name="frag_work_detail_format">　%1$d月%2$d日</string>
	<string name="frag_work_detail_today">(今日)</string>
	<string name="frag_work_detail_no_equipment">●設備なし</string>
	<string name="frag_work_list_status_avail">利用可</string>
	<string name="frag_work_list_status_full">満員中</string>
	<string name="frag_work_list_status_out_service">時間外</string>
	<string name="frag_work_list_seat">席</string>
	<string name="frag_work_list_no_equipment">設備なし</string>
	<string name="frag_work_list_max_psn">・最大</string>
	<string name="frag_work_list_psn_avail">人利用\n・</string>
	<string name="frag_work_list_min_unit">分から利用可能</string>
	<string name="frag_work_list_time_now">現在</string>
	<string name="xml_account_link_msg">ＩＣ情報とアカウントを連携します</string>
	<string name="xml_account_link_ic">IC</string>
	<string name="xml_account_link_ic_info">IC情報</string>
	<string name="xml_account_link_user_name">山田太郎</string>
	<string name="xml_account_link_account">Spaceeアカウント</string>
	<string name="xml_account_link_btn_cancel">キャンセル</string>
	<string name="xml_account_link_btn_link">連携する</string>
	<string name="xml_app_main_msg">借りたいスペースを選択してください</string>
	<string name="xml_app_main_space_work">作業スペース</string>
	<string name="xml_app_main_space_free">空きスペース</string>
	<string name="xml_app_main_space_meeting">ミーティングスペース</string>
	<string name="xml_app_main_btn_check_booking">予約確認</string>
	<string name="xml_app_main_btn_rule_guide">ご利用ガイド</string>
	<string name="xml_app_main_btn_floor_guide">フロアガイド</string>
	<string name="xml_book_detail_space_avail">利用可</string>
	<string name="xml_book_detail_space_not_avail">利用不可</string>
	<string name="xml_book_detail_status3_title">ご利用開始まであと</string>
	<string name="xml_book_detail_msg1">このスペースは今すぐご利用頂けます</string>
	<string name="xml_book_detail_msg2">このスペースはまだご利用頂けません</string>
	<string name="xml_book_detail_btn_floor_guide">フロアガイド</string>
	<string name="xml_book_detail_space_name">スペース名</string>
	<string name="xml_book_detail_checkin">チェックイン</string>
	<string name="xml_book_detail_checkout">チェックアウト</string>
	<string name="xml_book_detail_from">から</string>
	<string name="xml_book_detail_to">まで</string>
	<string name="xml_book_detail_use">ご利用方法</string>
	<string name="xml_book_detail_use_sample">廊下をまっすぐ行き、突き当たりを左に行くと左手にあります。\n鍵は「5895」で開くことができます</string>
	<string name="xml_book_detail_btn_check_space">ログアウトして、スペースを詳しく見る</string>
	<string name="xml_book_detail_btn_gohome">ログアウトして、ホームに戻る</string>
	<string name="xml_book_list_space_avail">利用可</string>
	<string name="xml_book_list_space_not_avail">利用不可</string>
	<string name="xml_book_list_space_status2">ご利用開始まであと</string>
	<string name="xml_check_booking_msg1">ログイン方法を選択してください</string>
	<string name="xml_check_booking_btn_login_ic">ICカード・IC付携帯</string>
	<string name="xml_check_booking_btn_login_qr">アプリのＱＲコード</string>
	<string name="xml_check_booking_btn_login_pw">ＩＤ／パスワードを入力</string>
	<string name="xml_check_booking_msg2">未会員の方は会員登録を\n行って下さい</string>
	<string name="xml_check_booking_btn_reg_by_app">アプリで会員登録</string>
	<string name="xml_check_booking_btn_reg_input">この端末で会員登録</string>
	<string name="xml_entry_app_acc_by_qr">ＱＲコードでアクセス</string>
	<string name="xml_entry_app_acc_by_browser">ブラウザでアクセス</string>
	<string name="xml_entry_app_send_sms">URLをSMSメッセージで送る</string>
	<string name="xml_entry_app_msg">アプリで決済情報まで登録完了後\nログイン方法を選択してください</string>
	<string name="xml_entry_app_btn_login_ic">ＩＣ機能でログイン</string>
	<string name="xml_entry_app_btn_login_qr">ＱＲコードでログイン</string>
	<string name="xml_entry_card_by_card">クレジットカード</string>
	<string name="xml_entry_card_by_invoice">請求書支払い</string>
	<string name="xml_entry_card_card_no">カード番号</string>
	<string name="xml_entry_card_security_code">セキュリティコード</string>
	<string name="xml_entry_card_name">名義</string>
	<string name="xml_entry_card_name_sample">TAROU YAMADA</string>
	<string name="xml_entry_card_expire_date">有効期限</string>
	<string name="xml_entry_card_month">月</string>
	<string name="xml_entry_card_year">年</string>
	<string name="xml_entry_card_btn_next">内容確認へ</string>
	<string name="xml_entry_card_warning_msg">ログインされたアカウントには決済情報が登録されていません。\n決済情報を登録してください。</string>
	<string name="xml_entry_input_name">名前</string>
	<string name="xml_entry_input_fname">氏</string>
	<string name="xml_entry_input_gname">名</string>
	<string name="xml_entry_input_maddr">メールアドレス</string>
	<string name="xml_entry_input_maddr_sample">hogehoge@mail.com</string>
	<string name="xml_entry_input_msg1">携帯メールアドレスの場合はspacee.jpを受信許可してください。\n後ほど、登録確認のメールを送信致します。\nお間違えのないようにお願い致します。</string>
	<string name="xml_entry_input_password">パスワード</string>
	<string name="xml_entry_input_msg2">パスワードは半角英数8文字以上で入力してください</string>
	<string name="xml_entry_input_btn_next">支払い情報の入力へ</string>
	<string name="xml_entry_invoice_by_card">クレジットカード</string>
	<string name="xml_entry_invoice_by_invoice">請求書支払い</string>
	<string name="xml_entry_invoice_company">会社名</string>
	<string name="xml_entry_invoice_company_hint">株式会社Spacee</string>
	<string name="xml_entry_invoice_name">担当者名</string>
	<string name="xml_entry_invoice_name_hint">山田太郎</string>
	<string name="xml_entry_invoice_pcode">郵便番号（ハイフン無し）</string>
	<string name="xml_entry_invoice_pcode_hint">1500032</string>
	<string name="xml_entry_invoice_addr1">住所（都道府県市区）</string>
	<string name="xml_entry_invoice_addr1_hint">東京都渋谷区</string>
	<string name="xml_entry_invoice_addr2">住所（以降）</string>
	<string name="xml_entry_invoice_addr2_hint">桜ケ丘20-12</string>
	<string name="xml_entry_invoice_phone">電話番号(ハイフン無し)</string>
	<string name="xml_entry_invoice_phone_hint">0312345678</string>
	<string name="xml_entry_invoice_btn_next">利用規約の同意へ</string>
	<string name="xml_entry_policy_check_agree">利用規約に同意する</string>
	<string name="xml_entry_policy_btn_reg">スペイシ―に登録</string>
	<string name="xml_link_complete_msg">連携しました</string>
	<string name="xml_link_complete_ic_info">IC情報</string>
	<string name="xml_link_complete_account">Spaceeアカウント</string>
	<string name="xml_link_complete_btn_next">決済へ</string>
	<string name="xml_login_ic_msg1">ＩＣリーダーにＩＣカード・ＩＣ付き携帯を\nかざしてください</string>
	<string name="xml_login_ic_card_type">対応規格</string>
	<string name="xml_login_ic_card_sample">SUICA / PASMO / iPhone7(ApplePay)\nSUICA / PASMO</string>
	<string name="xml_login_ic_msg2">お持ちでない方は\n別のログイン方法をご利用ください</string>
	<string name="xml_login_ic_btn_login_qr">ＱＲコードでログイン</string>
	<string name="xml_login_ic_btn_login_pw">ID/パスワードでログイン</string>
	<string name="xml_login_pw_id">ＩＤ</string>
	<string name="xml_login_pw_msg1">ＩＤを入力してください</string>
	<string name="xml_login_pw_password">パスワード</string>
	<string name="xml_meeting_detail_capacity1">収容人数</string>
	<string name="xml_meeting_detail_square">広さ</string>
	<string name="xml_meeting_detail_equipment">設備</string>
	<string name="xml_meeting_detail_date"> MM月dd日(今日)</string>
	<string name="xml_meeting_detail_status">利用可</string>
	<string name="xml_meeting_detail_capacity2">最大 10 人</string>
	<string name="xml_meeting_detail_checkin">チェックイン</string>
	<string name="xml_meeting_detail_usage">ご利用時間</string>
	<string name="xml_meeting_detail_hour">時間</string>
	<string name="xml_meeting_detail_minute">分</string>
	<string name="xml_meeting_detail_psn">人</string>
	<string name="xml_meeting_detail_plan">料金プラン</string>
	<string name="xml_meeting_detail_amount">ご利用料金</string>
	<string name="xml_meeting_detail_yen">円</string>
	<string name="xml_meeting_detail_btn_rent">このスペースを借りる</string>
	<string name="xml_provider_login_id">ＩＤ</string>
	<string name="xml_provider_login_msg1">ＩＤを入力してください</string>
	<string name="xml_provider_login_password">パスワード</string>
	<string name="xml_provider_login_msg2">パスワードを入力してください</string>
	<string name="xml_provider_login_btn_login">ログイン</string>
</resources>