<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/fragmentLoginPW"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="740dp"
			android:minHeight="620dp"
			android:background="@color/light_grey_white"
			android:orientation="horizontal">

			<View
				android:layout_width="0dip"
				android:layout_weight="60"
				android:layout_height="match_parent" />

			<LinearLayout
				android:layout_width="0dip"
				android:layout_weight="700"
				android:layout_height="match_parent"
				android:orientation="vertical" >

				<View
					android:layout_width="match_parent"
					android:layout_height="0dip"
					android:layout_weight="50" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="0dip"
					android:layout_weight="70"
					android:text="@string/xml_provider_login_id"
					android:textColor="@color/spacee_blue"
					android:textSize="22sp"
					android:gravity="center_vertical" />

				<EditText
					android:id="@+id/editID"
					android:layout_width="match_parent"
					android:layout_height="0dip"
					android:layout_weight="80"
					android:hint="@string/xml_provider_login_msg1"
					android:textColor="@color/text_black"
					android:textSize="26sp"
					android:paddingLeft="10sp"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:gravity="center_vertical"
					android:background="@xml/shape_edit_idpw" />

				<View
					android:layout_width="match_parent"
					android:layout_height="0dip"
					android:layout_weight="20" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="0dip"
					android:layout_weight="70"
					android:text="@string/xml_provider_login_password"
					android:textColor="@color/spacee_blue"
					android:textSize="22sp"
					android:gravity="center_vertical" />

				<EditText
					android:id="@+id/editPW"
					android:layout_width="match_parent"
					android:layout_height="0dip"
					android:layout_weight="80"
					android:hint="@string/xml_provider_login_msg2"
					android:textColor="@color/text_black"
					android:textSize="26sp"
					android:paddingLeft="10sp"
					android:inputType="textPassword"
					android:maxLines="1"
					android:gravity="center_vertical"
					android:background="@xml/shape_edit_idpw" />

				<View
					android:layout_width="match_parent"
					android:layout_height="0dip"
					android:layout_weight="370" />
			</LinearLayout>

			<View
				android:layout_width="0dip"
				android:layout_weight="100"
				android:layout_height="match_parent" />

			<LinearLayout
				android:layout_width="0dip"
				android:layout_weight="360"
				android:layout_height="match_parent"
				android:orientation="vertical" >

				<View
					android:layout_width="match_parent"
					android:layout_height="0dip"
					android:layout_weight="290" />

				<TextView
					android:id="@+id/btnLoginPW"
					android:layout_width="match_parent"
					android:layout_height="0dip"
					android:layout_weight="80"
					android:text="@string/xml_provider_login_btn_login"
					android:textColor="@color/text_white"
					android:textSize="26sp"
					android:gravity="center"
					android:background="@drawable/shape_button_gray" />

				<View
					android:layout_width="match_parent"
					android:layout_height="0dip"
					android:layout_weight="370" />
			</LinearLayout>

			<View
				android:layout_width="0dip"
				android:layout_weight="60"
				android:layout_height="match_parent" />
		</LinearLayout>
	</ScrollView>

	<include
		android:id="@+id/errorMessagePanel"
		layout="@layout/layout_error_message" />
</FrameLayout>
